# hoshi

./: .gitignore  AGENTS.md  PLAN.md  README.md  index.html  package-lock.json  package.json
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/ai/: analyzer.ts  index.ts  openrouter.ts  provider.ts
src/components/: DebugPanel.tsx  DialogueBubble.tsx  HUD.tsx  HoshiCanvas.tsx
src/desktop/: autostart.ts  index.ts  notification.ts
src/dialogue/: engine.ts  index.ts
src/engines/: behavior.ts  emotion.ts  identity.ts  index.ts  memory.ts
src/observers/: index.ts  system.ts
src/persist/: db.ts  index.ts  save.ts
src/renderer/: PixiApp.ts  animation-engine.ts  animations.ts  index.ts
src/store/: index.ts  state.ts
src/types/: index.ts
