[package]
name = "hoshi"
version = "0.1.0"
description = "A digital desktop companion"
authors = ["you"]
edition = "2021"

[lib]
name = "hoshi_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-autostart = "2"
tauri-plugin-notification = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
